meson: Ignore unused-parameter warnings
We don't care much about function parameters being used or not

--- a/meson.build
+++ b/meson.build
@@ -6,6 +6,10 @@ project('wakefield', 'c',
                    ],
 )
 
+add_project_arguments(
+  '-Wno-unused-parameter',
+  language: 'c',
+)
 
 config_h = configuration_data()
 config_h.set_quoted('PACKAGE_VERSION', meson.project_version())
